2007-03-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpReqLib.cmake: turned "-Wall" on by default for
	UNIX, rather than just when YARP_ADMIN is set.

2007-03-27  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_OS/src/Thread.cpp: fixed bug, onStop()
	was not called properly.

2007-03-27  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_sig/Matrix.h, Vector.h:
	Modified Vector and Matrix classes to include internal
	compatibility with the GSL library. Vector class no
	longer derives from VectorOf<double>.
	Separated read/write methods in Vector class; methods should
	now allow sending/receiving data across different architectures.
	Changed regression tests accordingly.

2007-03-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/urbtc: added driver from Jonas Ruesch for
	iMCs01 controlboard (see http://www.ixs.co.jp/en).

2007-03-26  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_sig/src/Matrix.cpp, Vector.cpp:
	removed ACE_String_Base::append() which does not
	compile on ace 5.4. Now using operator +=.

2007-03-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/FindGSL.cmake: added minimal linux functionality, 
	corrected some (probably copy/paste?) references to OpenCV.

2007-03-23  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_sig: moved Rand.h, Rand.cpp to libYARP_math. 
	Moved all Vector/Matrix related functions that were previously 
	in libYARP_sig to libYARP_math.

2007-03-22  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_math: added directory structure and some initial
	files for for libYARP_math. Changed cmake files accordingly..
	For now the default is that CMake does not include the library 
	in the main project.

2007-03-21  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_sig/src/Rand.cpp: random generation (scalar and 
	vectors)

2007-03-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/RemoteControlBoard.cpp: (and a lot of other
	files) - cleaned up doxygen tags
